@@ -2,7 +2,7 @@ package ee.qrental.common.ui.controller.transaction;
 
 
 import ee.qrental.transaction.application.port.in.query.GetTransactionQuery;
-import ee.qrental.transaction.application.port.in.request.TransactionFilterRequest;
+import ee.qrental.transaction.application.port.in.request.transaction.TransactionFilterRequest;
 import ee.qrental.transaction.application.port.in.utils.Week;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Controller;
@@ -12,7 +12,7 @@ import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 
-import java.util.Arrays;
+import java.util.List;
 
 @AllArgsConstructor
 @Controller
@@ -23,7 +23,7 @@ public class TransactionQueryController {
     @GetMapping
     public String getPageWithAllTransactions(final Model model) {
         model.addAttribute("searchRequest", new TransactionFilterRequest());
-        model.addAttribute("years", Arrays.asList(2023));
+        model.addAttribute("years", List.of(2023));
         model.addAttribute("weeks", Week.values());
         model.addAttribute("transactions", transactionQuery.getAll());
 
@@ -36,7 +36,7 @@ public class TransactionQueryController {
             final Model model) {
         model.addAttribute("transactions", transactionQuery.getAllByRequest(searchRequest));
         model.addAttribute("searchRequest", new TransactionFilterRequest());
-        model.addAttribute("years", Arrays.asList(2023));
+        model.addAttribute("years", List.of(2023));
         model.addAttribute("weeks", Week.values());
 
         return "transactions";
